--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,6 +21,18 @@
     gap: 5px
 }
 
+.tab-error-common {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    border: 1px solid;
+    border-radius: 20px;
+    width: 100%;
+    gap: 5px
+}
+
 .deployment-container {
     height: 250px;
     border: 1px solid;
